--- a/FrontEnd/FrontEnd/src/app/post/post.component.html
+++ b/FrontEnd/FrontEnd/src/app/post/post.component.html
@@ -8,4 +8,6 @@
         <label for="content">Content: </label>
         <input id="content" [(ngModel)]="post.content" placeholder="content">
     </div>
+<button type="button" (click)="save()">save</button>
+<button type="button" (click)="goBack()">go back</button>
 </div>
