--- a/FrontEnd/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/FrontEnd/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-header></app-header>
-<app-list></app-list>
+<nav>
+    <a routerLink="/dashboard">Dashboard</a>
+    <a routerLink="/posts">Manage posts</a>
+</nav>
+<router-outlet></router-outlet>
