--- a/FrontEnd/FrontEnd/src/app/post/post.component.scss
+++ b/FrontEnd/FrontEnd/src/app/post/post.component.scss
@@ -1,65 +1,25 @@
-.posts {
-    margin: 0 0 2em 0;
-    list-style-type: none;
-    padding: 0;
-    width: 15em;
-  }
-  
-  .posts li {
-    display: flex;
-  }
-  
-  .posts button {
-    flex: 1;
-    cursor: pointer;
-    position: relative;
-    left: 0;
-    background-color: #EEE;
-    margin: .5em;
-    padding: 0;
-    border-radius: 4px;
-    display: flex;
-    align-items: stretch;
-    height: 1.8em;
-  }
-  
-  .posts button:hover {
-    color: #2c3a41;
-    background-color: #e6e6e6;
-    left: .1em;
-  }
-  
-  .posts button:active {
-    background-color: #525252;
-    color: #fafafa;
-  }
-  
-  .posts button.selected {
-    background-color: black;
-    color: white;
-  }
-  
-  .posts button.selected:hover {
-    background-color: #505050;
-    color: white;
-  }
-  
-  .posts button.selected:active {
-    background-color: black;
-    color: white;
-  }
-  
-  .posts .badge {
-    display: inline-block;
-    font-size: small;
-    color: white;
-    padding: 0.8em 0.7em 0 0.7em;
-    background-color: #405061;
-    line-height: 1em;
-    margin-right: .8em;
-    border-radius: 4px 0 0 4px;
-  }
-  
-  .posts .name {
-    align-self: center;
-  }
+/* HeroDetailComponent's private CSS styles */
+label {
+  color: #435960;
+  font-weight: bold;
+}
+input {
+  font-size: 1em;
+  padding: .5rem;
+}
+button {
+  margin-top: 20px;
+  margin-right: .5rem;
+  background-color: #eee;
+  padding: 1rem;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+button:hover {
+  background-color: #cfd8dc;
+}
+button:disabled {
+  background-color: #eee;
+  color: #ccc;
+  cursor: auto;
+}
