--- a/FrontEnd/FrontEnd/src/styles.scss
+++ b/FrontEnd/FrontEnd/src/styles.scss
@@ -15,6 +15,7 @@ h1 {
   body, input[type="text"], button {
     color: #333;
     font-family: Cambria, Georgia, serif;
+    text-align: center;
   }
   button {
     background-color: #eee;
@@ -22,8 +23,6 @@ h1 {
     border-radius: 4px;
     cursor: pointer;
     color: black;
-    font-size: 1.2rem;
-    padding: 1rem;
     margin-right: 1rem;
     margin-bottom: 1rem;
     margin-top: 1rem;
