--- a/FrontEnd/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/FrontEnd/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <nav>
     <a routerLink="/dashboard">Dashboard</a>
-    <a routerLink="/posts">Manage posts</a>
+    <a routerLink="/posts">Add post</a>
 </nav>
 <router-outlet></router-outlet>
