--- a/FrontEnd/FrontEnd/src/app/dashboard/dashboard.component.html
+++ b/FrontEnd/FrontEnd/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,9 @@
 <div class="posts-menu">
-  <a *ngFor="let post of posts" routerLink="/detail/{{post.id}}">
+  <div *ngFor="let post of posts">
+  <a routerLink="/detail/{{post.id}}">
     <img src="{{post.photoUrl}}" alt="text">
     {{post.content}}
   </a>
+  <button type="button" class="delete" title="delete post" (click)="delete(post)">x</button>
+</div>
 </div>
