--- a/FrontEnd/FrontEnd/src/app/list/list.component.html
+++ b/FrontEnd/FrontEnd/src/app/list/list.component.html
@@ -1,23 +1,17 @@
-<h2>Posts</h2>
+<div class="form-container">
+<div class="create">
+  <h2>Create Post</h2>
+  <div class="row">
+      <label for="new-post-content">Post Content</label>
+      <input id="new-post-content" #postContent />
+  </div>
 
-<div>
-  <label for="new-post-content">Post Content: </label>
-  <input id="new-post-content" #postContent />
-
-  <label for="new-post-photoUrl">Post Photo Url</label>
-  <input id="new-post-photoUrl" #postphotoUrl />
+  <div class="row">
+      <label for="new-post-photoUrl">Post Photo Url</label>
+      <input id="new-post-photoUrl" #postphotoUrl />
+  </div>
 
   <button type="button" class="add-button" (click)="add(postContent.value, postphotoUrl.value); postContent.value='';postphotoUrl.value=''">
     Add post
   </button>
 </div>
-
-<ul class="posts">
-  <li *ngFor="let post of posts">
-    <a routerLink="/detail/{{post.id}}">
-      {{post.content}}
-    </a>
-    <button type="button" class="delete" title="delete post"
-      (click)="delete(post)">x</button>
-  </li>
-</ul>
